# container-service-extension

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CONTRIBUTING.md  ChangeLog  Dockerfile  LICENSE.txt  Makefile  NOTICE.txt  Pipfile  README.md  cse.service  cse.sh  dev-requirements.txt  format-code.sh  helmwiki.md  open_source_license_container-service-extension_1.2.0_GA.txt  open_source_license_container-service-extension_2.0_Beta.txt  open_source_license_container-service-extension_2.0_GA.txt  open_source_license_container-service-extension_2.5_GA.txt  open_source_license_container-service-extension_2.6_Beta.txt  open_source_license_container-service-extension_2.6_GA.txt  open_source_license_container-service-extension_3.0_GA.txt  open_source_license_container-service-extension_3.1_Beta.txt  open_source_licenses.txt  publish.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  update_pipfile.sh
container_service_extension/: CseCache.py  PksCache.py  PksInfo.py  PvdcResourcePoolPathInfo.py  Uaac.py  __init__.py  abstract_broker.py  amqp_consumer.py  authorization.py  broker.py  broker_manager.py  broker_selector.py  cloudapi_utils.py  cluster.py  compute_policy_manager.py  config.py  config_validator.py  configure_cse.py  consumer.py  cove_client.py  create_cse_service_role.py  cse.py  cse_service_role_mgr.py  developer_guide.md  encryption_engine.py  error_messages.py  exception_handler.py  exceptions.py  install_utils.py  local_template_manager.py  logger.py  models.py  mqtt_consumer.py  mqtt_extension_manager.py  node.py  nsxt_backed_gateway_service.py  operation_context.py  ovdc_cache.py  ovdc_manager.py  ovdc_request_handler.py  (+37 more)
cse/: AUTHORS  ChangeLog  MANIFEST.in  requirements.txt  setup.cfg
cse-vcd/: README.md  setup.cfg
cse/container_service_extension/: cluster.py  consumer.py  cove_client.py  cse.py  processor.py  provisioner.py  task.py  utils.py  vc_adapter.py
cse/example/: config-vcd.yml  config.yml
cse/examples/: config.yml
cse/kov-py/: README.md  setup.cfg  setup.py
cse/kov-py/docs/: Cluster.md  ClusterConfig.md  ClusterStatus.md  ClusterUpdateConfig.md  DefaultApi.md  DiskFormat.md  Error.md  InstanceSize.md  NetworkEndpoint.md  StorageClass.md  Task.md  TaskContext.md  TaskId.md  TaskStepInfo.md  TaskType.md
cse/kov-py/pykov/: __init__.py  api_client.py  configuration.py  rest.py
cse/kov-py/pykov/apis/: default_api.py
cse/kov-py/pykov/models/: cluster.py  cluster_config.py  cluster_status.py  error.py  instance_size.py  storage_class.py  task_context.py  task_state.py
cse/kov-py/swagger_client/: api_client.py  configuration.py
cse/kov-py/swagger_client/apis/: default_api.py
cse/kov-py/swagger_client/models/: __init__.py  cluster_update_config.py  disk_format.py  network_endpoint.py  task.py  task_id.py  task_step_info.py  task_type.py
cse/kov-py/test/: test_cluster.py  test_cluster_config.py  test_cluster_status.py  test_cluster_update_config.py  test_default_api.py  test_disk_format.py  test_error.py  test_instance_size.py  test_network_endpoint.py  test_storage_class.py  test_task.py  test_task_context.py  test_task_id.py  test_task_state.py  test_task_step_info.py  test_task_type.py
cse/scripts/: list_extensions.py  register_extension.py
cse/swagger/: swagger.yaml
cse/template_automation_scripts/: README.md  ansible_hosts  kub.json  kub_master.sh  kub_minion.sh  kubernetes.json  kubernetes_cluster.yaml  provision.sh  template.sh  vcd_vapp.yaml
cse_def_schema/: capvcd_schema_1_0_0.json  schema_1_0_0.json  schema_2_0_0.json  schema_2_1_0.json
docker/: Dockerfile  Dockerfile.dev  LICENSE.md  Makefile  README.md  osstpmgmt.yaml
docs/: CLUSTER_ADMIN.md  CLUSTER_MANAGEMENT.md  CONTRIBUTING.md  CSE_ADMIN.md  CSE_CONFIG.md  CSE_INSTALL_PREREQUISITES.md  CSE_SERVER_MANAGEMENT.md  CSE_UI_PLUGIN.md  EDITING.md  ENT-PKS.md  ENT_PKS.md  ESS-PKS.md  Gemfile  INSTALLATION.md  INTRO.md  KNOWN_ISSUES.md  NFS_STATIC_PV.md  RBAC.md  README.md  RELEASE_NOTES.md  TROUBLESHOOTING.md  (+5 more)
(+595 files in other folders)
