# container-service-extension
# Copyright (c) 2017 VMware, Inc. All Rights Reserved.
# SPDX-License-Identifier: BSD-2-Clause

[metadata]
name = container-service-extension
summary = Container Service Extension for vCloud Director
long_description = file: README.md
long_description_content_type = text/markdown
author = Paco Gomez
author_email = pgomez@vmware.com
url = https://github.com/vmware/container-service-extension
license = BSD-2

classifier =
    Environment :: Console
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3

python_requires = >= 3.7

[entry_points]
console_scripts =
    cse = container_service_extension.server.cli.server_cli:cli
