# container-service-extension
# Copyright (c) 2017 VMware, Inc. All Rights Reserved.
# SPDX-License-Identifier: BSD-2-Clause

[metadata]
name = container-service-extension
version = 0.0.1
summary = Container Service Extension for vCloud Director
description-file =
    README.md
author = VMware
author_email = Paco Gomez <pgomez@vmware.com>
url = http://vmware.com

classifier =
    Environment :: VMware vCloud
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

requires-python = >=2.7

[files]
packages =
     container_service_extension

[global]

[wheel]
universal = 1

[entry_points]
console_scripts =
    cse = container_service_extension.cse:main
